# FaddeevaM

./: CMakeLists.txt  README.md
CMake/Mathematica/: FindMathematica.cmake
FaddeevaM/: FaddeevaM.m  PacletInfo.m
FaddeevaM/Kernel/: init.m
FaddeevaM/LibraryResources/Source/: Faddeeva.c  Faddeeva.h  MMAFaddeeva.c
